create message nodes

--- a/src/dash_msgs/CMakeLists.txt
+++ b/src/dash_msgs/CMakeLists.txt
@@ -1,35 +1,28 @@
 cmake_minimum_required(VERSION 3.8)
-project(fastdash)
-include(FetchContent)
+project(dash_msgs)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-FetchContent_Declare(
-  caplin
-  GIT_REPOSITORY https://github.com/pragmaticlinuxblog/caplin
-  GIT_TAG        1.0.0 
-)
-FetchContent_MakeAvailable(caplin)
 
-FetchContent_GetProperties(caplin)
-    if(NOT caplin_POPULATED)
-      message("Cloning caplin")
-      FetchContent_Populate(caplin)
-      add_subdirectory(
-        ${caplin_SOURCE_DIR}
-        ${caplin_BINARY_DIR})
-    endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(example_interfaces REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rosbag2_cpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
 
-# find_package()
+
+# uncomment the following section in order to fill in
+# further dependencies manually.
+# find_package(<dependency> REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/ImuIn.msg"
+  "msg/MotecIn.msg"
+  "msg/TeensyRear.msg"
+  DEPENDENCIES builtin_interfaces std_msgs
+ )
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -43,14 +36,6 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
-
-add_executable(fastdash src/fastdash.cpp)
-ament_target_dependencies(fastdash rclcpp rosbag2_cpp std_msgs)
-
-
-install(TARGETS
-fastdash
-  DESTINATION lib/${PROJECT_NAME}
-)
+ament_export_dependencies(rosidl_default_runtime)
 
 ament_package()
