--- a/src/fastdash/CMakeLists.txt
+++ b/src/fastdash/CMakeLists.txt
@@ -6,21 +6,21 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-FetchContent_Declare(
-  caplin
-  GIT_REPOSITORY https://github.com/pragmaticlinuxblog/caplin
-  GIT_TAG        1.0.0 
-)
-FetchContent_MakeAvailable(caplin)
+# FetchContent_Declare(
+#   caplin
+#   GIT_REPOSITORY https://github.com/pragmaticlinuxblog/caplin
+#   GIT_TAG        1.0.0 
+# )
+# FetchContent_MakeAvailable(caplin)
 
-FetchContent_GetProperties(caplin)
-    if(NOT caplin_POPULATED)
-      message("Cloning caplin")
-      FetchContent_Populate(caplin)
-      add_subdirectory(
-        ${caplin_SOURCE_DIR}
-        ${caplin_BINARY_DIR})
-    endif()
+# FetchContent_GetProperties(caplin)
+#     if(NOT caplin_POPULATED)
+#       message("Cloning caplin")
+#       FetchContent_Populate(caplin)
+#       add_subdirectory(
+#         ${caplin_SOURCE_DIR}
+#         ${caplin_BINARY_DIR})
+#     endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
@@ -29,6 +29,7 @@ find_package(rclcpp REQUIRED)
 find_package(rosbag2_cpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(can_msgs REQUIRED)
+find_package(dash_msgs REQUIRED)
 
 # find_package()
 
@@ -44,13 +45,15 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+
+
 include_directories(include)
 
 add_executable(fastdash include/fastdash.hpp src/fastdash.cpp)
 
 TARGET_LINK_LIBRARIES(fastdash dl -lboost_system)# -pthread  -lcrypt -lm -lpthread)
 
-ament_target_dependencies(fastdash rclcpp rosbag2_cpp std_msgs can_msgs)
+ament_target_dependencies(fastdash rclcpp rosbag2_cpp std_msgs can_msgs dash_msgs example_interfaces)
 
 
 install(TARGETS
