--- a/src/fastdash/package.xml
+++ b/src/fastdash/package.xml
@@ -13,6 +13,7 @@
   <depend>rclcpp</depend>
   <depend>rosbag2_cpp</depend>
   <depend>std_msgs</depend>
+  <depend>dash_msgs</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
