--- a/src/fastdash/CMakeLists.txt
+++ b/src/fastdash/CMakeLists.txt
@@ -82,7 +82,7 @@ include_directories(include)
 
 add_executable(fastdash include/fastdash.hpp src/fastdash.cpp)
 
-TARGET_LINK_LIBRARIES(fastdash dl -lboost_system)# -pthread  -lcrypt -lm -lpthread)
+# TARGET_LINK_LIBRARIES(fastdash dl -lboost_system)# -pthread  -lcrypt -lm -lpthread)
 
 ament_target_dependencies(fastdash rclcpp rosbag2_cpp std_msgs can_msgs dash_msgs example_interfaces pigpio)
 
