i forgot how to include a lib

--- a/src/fastdash/CMakeLists.txt
+++ b/src/fastdash/CMakeLists.txt
@@ -5,36 +5,6 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# Find the path to the pigpio includes.
-find_path(pigpio_INCLUDE_DIR 
-	NAMES pigpio.h pigpiod_if.h pigpiod_if2.h
-	HINTS /usr/local/include)
-	
-# Find the pigpio libraries.
-find_library(pigpio_LIBRARY 
-	NAMES libpigpio.so
-	HINTS /usr/local/lib)
-find_library(pigpiod_if_LIBRARY 
-	NAMES libpigpiod_if.so
-	HINTS /usr/local/lib)
-find_library(pigpiod_if2_LIBRARY 
-	NAMES libpigpiod_if2.so
-	HINTS /usr/local/lib)
-    
-# Set the pigpio variables to plural form to make them accessible for 
-# the paramount cmake modules.
-set(pigpio_INCLUDE_DIRS ${pigpio_INCLUDE_DIR})
-set(pigpio_INCLUDES     ${pigpio_INCLUDE_DIR})
-
-# Handle REQUIRED, QUIET, and version arguments 
-# and set the <packagename>_FOUND variable.
-include(FindPackageHandleStandardArgs)
-find_package_handle_standard_args(pigpio 
-    DEFAULT_MSG 
-    pigpio_INCLUDE_DIR pigpio_LIBRARY pigpiod_if_LIBRARY pigpiod_if2_LIBRARY)
-
-
-
 # FetchContent_Declare(
 #   caplin
 #   GIT_REPOSITORY https://github.com/pragmaticlinuxblog/caplin
@@ -59,7 +29,7 @@ find_package(rosbag2_cpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(can_msgs REQUIRED)
 find_package(dash_msgs REQUIRED)
-# find_package(libpigpio REQUIRED)
+# find_package(lgpio REQUIRED)
 
 
 # find_package()
@@ -82,9 +52,9 @@ include_directories(include)
 
 add_executable(fastdash include/fastdash.hpp src/fastdash.cpp)
 
-# TARGET_LINK_LIBRARIES(fastdash dl -lboost_system)# -pthread  -lcrypt -lm -lpthread)
+TARGET_LINK_LIBRARIES(fastdash dl -lpigpio)# -pthread  -lcrypt -lm -lpthread)
 
-ament_target_dependencies(fastdash rclcpp rosbag2_cpp std_msgs can_msgs dash_msgs example_interfaces pigpio)
+ament_target_dependencies(fastdash rclcpp rosbag2_cpp std_msgs can_msgs dash_msgs example_interfaces)
 
 
 install(TARGETS
